--- a/src/main/resources/InventoryManagementSystem/addProduct.fxml
+++ b/src/main/resources/InventoryManagementSystem/addProduct.fxml
@@ -27,6 +27,11 @@
               </columns>
             </TableView>
             <TextField fx:id="partSearchBox" layoutX="205.0" layoutY="14.0" onAction="#partSearch" prefHeight="25.0" prefWidth="158.0" promptText="Search by Part ID or Name" />
+            <Label layoutX="14.0" layoutY="13.0" prefHeight="17.0" prefWidth="76.0" text="Parts">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
          </children>
       </Pane>
       <Pane layoutX="539.0" layoutY="391.0" prefHeight="254.0" prefWidth="375.0" style="-fx-border-color: black; -fx-border-width: 1; -fx-border-style: solid;">
@@ -40,6 +45,11 @@
                </columns>
             </TableView>
             <TextField fx:id="associatedPartSearchBox" layoutX="185.0" layoutY="14.0" onAction="#associatedPartSearch" prefHeight="25.0" prefWidth="178.0" promptText="Search by Product ID or Name" />
+            <Label layoutX="14.0" layoutY="13.0" prefHeight="27.0" prefWidth="133.0" text="Associated Parts">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
          </children>
       </Pane>
       <Button fx:id="backButton" layoutX="861.0" layoutY="709.0" mnemonicParsing="false" onAction="#goBack" prefHeight="25.0" prefWidth="53.0" text="Back" />
