--- a/src/main/resources/InventoryManagementSystem/addPart.fxml
+++ b/src/main/resources/InventoryManagementSystem/addPart.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="339.0" prefWidth="492.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="InventoryManagementSystem.addPartController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseEntered="#fieldSpy" prefHeight="339.0" prefWidth="492.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="InventoryManagementSystem.addPartController">
    <children>
       <Label layoutX="14.0" layoutY="14.0" prefHeight="38.0" prefWidth="69.0" text="Add Part">
          <font>
@@ -18,7 +18,7 @@
       <Label layoutX="14.0" layoutY="96.0" text="Name" />
       <Label layoutX="14.0" layoutY="126.0" text="Inventory" />
       <Label layoutX="14.0" layoutY="157.0" text="Price" />
-      <RadioButton fx:id="ihRadio" layoutX="109.0" layoutY="25.0" mnemonicParsing="false" onAction="#inRadio" text="In-House" />
+      <RadioButton fx:id="ihRadio" layoutX="109.0" layoutY="25.0" mnemonicParsing="false" onAction="#ihRadio" text="In-House" />
       <RadioButton fx:id="osRadio" layoutX="231.0" layoutY="25.0" mnemonicParsing="false" onAction="#osRadio" text="Outsourced" />
       <TextField fx:id="partidField" disable="true" editable="false" layoutX="109.0" layoutY="61.0" promptText="Auto-Generated ID" />
       <TextField fx:id="partnameField" layoutX="109.0" layoutY="92.0" />
@@ -27,10 +27,10 @@
       <TextField fx:id="partmaxField" layoutX="109.0" layoutY="188.0" />
       <Label layoutX="16.0" layoutY="192.0" text="Max" />
       <Label fx:id="radioResult" layoutX="16.0" layoutY="222.0" text="Select Source" />
-      <TextField fx:id="radioresultField" layoutX="109.0" layoutY="218.0" />
       <Label layoutX="273.0" layoutY="192.0" text="Min" />
       <TextField fx:id="partminField" layoutX="314.0" layoutY="188.0" />
       <Button fx:id="saveButton" layoutX="314.0" layoutY="284.0" mnemonicParsing="false" onAction="#savePart" text="Save" />
       <Button fx:id="backButton" layoutX="389.0" layoutY="284.0" mnemonicParsing="false" onAction="#goBack" text="Back" />
+      <TextField fx:id="radioresultField" editable="false" layoutX="109.0" layoutY="218.0" promptText="Select a Source" />
    </children>
 </AnchorPane>
