--- a/src/main/resources/InventoryManagementSystem/modPart.fxml
+++ b/src/main/resources/InventoryManagementSystem/modPart.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="339.0" prefWidth="492.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="InventoryManagementSystem.modPartController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseEntered="#fieldSpy" prefHeight="339.0" prefWidth="492.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="InventoryManagementSystem.modPartController">
    <children>
       <Label layoutX="14.0" layoutY="14.0" prefHeight="38.0" prefWidth="77.0" text="Mod Part">
          <font>
@@ -18,7 +18,7 @@
       <Label layoutX="14.0" layoutY="96.0" text="Name" />
       <Label layoutX="14.0" layoutY="126.0" text="Inventory" />
       <Label layoutX="14.0" layoutY="157.0" text="Price" />
-      <RadioButton fx:id="ihRadio" layoutX="109.0" layoutY="25.0" mnemonicParsing="false" onAction="#inRadio" text="In-House" />
+      <RadioButton fx:id="ihRadio" layoutX="109.0" layoutY="25.0" mnemonicParsing="false" onAction="#ihRadio" text="In-House" />
       <RadioButton fx:id="osRadio" layoutX="231.0" layoutY="25.0" mnemonicParsing="false" onAction="#osRadio" text="Outsourced" />
       <TextField fx:id="partidField" disable="true" layoutX="109.0" layoutY="61.0" promptText="SAVE = NEW ID" />
       <TextField fx:id="partnameField" layoutX="109.0" layoutY="92.0" />
