--- a/src/main/resources/InventoryManagementSystem/modProduct.fxml
+++ b/src/main/resources/InventoryManagementSystem/modProduct.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="704.0" prefWidth="954.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="InventoryManagementSystem.modProductController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseEntered="#fieldSpy" prefHeight="704.0" prefWidth="954.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="InventoryManagementSystem.modProductController">
    <children>
       <Label layoutX="358.0" layoutY="8.0" prefHeight="17.0" prefWidth="284.0" text="Inventory Management System">
          <font>
